--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,89 @@
     <title>Document</title>
 </head>
 <body>
-
+  <body>
+    <div class="wrapper">
+        <header>
+            <div class="container">
+                <div class="blue_cube">
+                    d
+                </div>
+                <div>
+                    <p class="site_text">Название сайта</p>
+                </div>
+                <button>
+                    <p class="button_text">Загрузить</p>
+                </button>
+            </div>
+        </header>
+        <main>
+            <div class="main-container">
+                <h2>
+                    Заголовок первого уровня
+                </h2>
+                <div class="grid-container">
+                    <div class="cube_with_information">
+                        <div class="square"></div>
+                        <h4>
+                            Название объекта
+                        </h4>
+                        <p class="text_in_grid-container">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum minima illum assumenda architecto unde neque
+                        </p>
+                    </div>
+                    <div class="cube_with_information">
+                        <div class="square"></div>
+                        <h4>
+                            Название объекта
+                        </h4>
+                        <p class="text_in_grid-container">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum minima illum assumenda architecto unde neque
+                        </p>
+                    </div>
+                    <div class="cube_with_information">
+                        <div class="square"></div>
+                        <h4>
+                            Название объекта
+                        </h4>
+                        <p class="text_in_grid-container">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum minima illum assumenda architecto unde neque
+                        </p>
+                    </div>
+                    <div class="cube_with_information">
+                        <div class="square"></div>
+                        <h4>
+                            Название объекта
+                        </h4>
+                        <p class="text_in_grid-container">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum minima illum assumenda architecto unde neque
+                        </p>
+                    </div>
+                    <div class="cube_with_information">
+                        <div class="square"></div>
+                        <h4>
+                            Название объекта
+                        </h4>
+                        <p class="text_in_grid-container">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum minima illum assumenda architecto unde neque
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <div class="line"></div>
+            <div class="low-panel">
+                <div class="author-Signa">
+                    Сагадеев Артур
+                </div>
+                <div class="icons">
+                    <img src="1.png" alt="">
+                    <img src="facebook-png948fc29b.jpg" alt="">
+                    <img src="twitter_small.png" alt="">
+                </div>
+            </div>
+        </footer>
+    </div>
     <script type="module" src="js/index.js"></script>
-
-  </body>
-  
+</body>
 </html>
