--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
         </main>
         <footer>
           <div class="container d-flex justify-content-between">
-            <div class="about font-weight-bold">Сагадеев Артур</div>
+            <div class="about font-weight-bold">Сaгадеев Артур</div>
             <div class="base">
               <a href=""
                 ><img src="f1.png" alt="vk" class="icons"
