--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./scss/style.scss"> 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
     <div class="bg-image" style="background-image: url(1.jpg)">
@@ -18,9 +19,7 @@
           <div class="row row-cols-md-3 g-3" id="cards"></div>
         </div>
       </main>
-
       <footer id = "footer"></footer>
-
       <div id="modal_1"></div>
       <div id="new_modal"></div>
     </div>
@@ -29,6 +28,5 @@
     <script type="module" src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script type="module" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="module" src="./script/script.js"></script>
-
   </body>
 </html>
