--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
     <title>My Website</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./scss/style.scss"> 
+    <!-- <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"> -->
+    <!-- <link rel="stylesheet" href="./scss/style.scss">  -->
   </head>
   <body>
     <div class="bg-image" style="background-image: url(1.jpg)">
@@ -18,17 +19,16 @@
           <div class="row row-cols-md-3 g-3" id="cards"></div>
         </div>
       </main>
-
       <footer id = "footer"></footer>
-
       <div id="modal_1"></div>
       <div id="new_modal"></div>
     </div>
-    <script type="module" src="./index.js"></script>
-    <script type="module" src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <!-- <script type="module" src="./index.js"></script> -->
+    <script src="app.js" type="module"></script>
+    <!-- <script type="module" src="../node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script type="module" src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
     <script type="module" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"></script> -->
     <script type="module" src="./script/script.js"></script>
-
   </body>
 </html>
